--- a/client/src/components/CustomNav/style.css
+++ b/client/src/components/CustomNav/style.css
@@ -10,21 +10,23 @@
     width: 100%;
     background-color: rgb(17, 17, 17);
 }
-
 .navbar-nav > a.nav-link {
     font-size: 18px;
     margin: 0 20px 0 20px;
     color: rgb(179, 179, 179)!important;
 }
-
 .navbar-nav > a.nav-link:hover {
     color: rgba(134, 139, 134, 0.938)!important;
 }
-
 ul {
     display: flex;
     justify-content: center;
     text-align: center;
     color: ghostwhite;
 }
-
+/* adjust size of nav slightly to fix small gap */
+@media only screen and (max-width: 768px) {
+    .navbar {
+        height: 59px;
+    }
+}
