--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -15,7 +15,7 @@
     -o-background-size: cover;
     background-size: cover;
     z-index: -1;
-    height: 100vh;
+    height: 105vh;
     width: 100%;
     display: flex;
     justify-content: center;
